--- a/DiceDetectorMobileApp/app/src/main/res/values/strings.xml
+++ b/DiceDetectorMobileApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="number_of_3s">Number of 3s:</string>
     <string name="number_of_2s">Number of 2s:</string>
     <string name="number_of_dice">Number of Dice:</string>
+    <string name="sum_dice_container">Sum of Dice:</string>
+    <string name="average_dice_value">Average Dice Value:</string>
+    <string name="average_sum">Average Sum:</string>
+    <string name="sum_of_dice">Sum of Dice:</string>
 </resources>
